      and the time precision must now match the SystemC time precision.  To
      get closer behavior to older versions, use e.g. --timescale-override
      "1ps/1ps".

**    Add --build to call make automatically, #2249. [Yutetsu TAKATSUKASA]

**    Configuring with ccache present now defaults to using it; see OBJCACHE.

**    Fix DPI import/export to be standard compliant, #2236. [Geza Lore]

****  Support $ferror, and $fflush without arguments, #1638.

****  Add error if use SystemC 2.2 and earlier (pre-2011) as is deprecated.

****  Greatly improve FST/VCD dump performance, #2244, #2246, #2250, #2257. [Geza Lore]

****  Fix build of fast path tracing code to use OPT_FAST, #2245. [Geza Lore]

****  Fix arrayed instances connecting to slices, #2263. [Don/engr248]


* Verilator 4.032 2020-04-04

***   Add column numbers to errors and warnings.

***   Add GCC 9-style line number prefix when showing source text for errors.

***   Add setting VM_PARALLEL_BUILDS=1 when using --output-split, #2185.

***   Change --quiet-exit to also suppress 'Exiting due to N errors'.

****  Suppress REALCVT for whole real numbers.

****  Support split_var in vlt files, #2219. [Marco Widmer]

****  Fix parameter type redeclaring a type, #2195. [hdzhangdoc]

****  Fix VCD open with empty filename, #2198. [Julius Baxter]

****  Fix packages as enum base types, #2202. [Driss Hafdi]

****  Fix duplicate typedefs in generate for, #2205. [hdzhangdoc]

****  Fix MinW portability, #2114. [Sean Cross]

****  Fix assertions with unique case inside, #2199. [hdzhangdoc]

****  Fix implicit conversion of floats to wide integers.


* Verilator 4.030 2020-03-08

**    Add split_var metacomment to assist UNOPTFLAT fixes, #2066. [Yutetsu TAKATSUKASA]

**    Add support for $dumpfile and $dumpvars, #2126. [Alexander Grobman]

**    Add support for dynamic arrays, #379.

***   Add +verilator+noassert flag to disable assertion checking. [Tobias Wölfel]
